tests/negative/gold/export2_test.gold
tests/negative/export2_test.toit:4:8: error: Unresolved export 'foo'
export foo
       ^~~
Compilation failed.
